@@ -1,11 +1,15 @@
 package tn.esprit.repository;
 
+import tn.esprit.models.Admin;
+import tn.esprit.models.Medecin;
+import tn.esprit.models.Patient;
 import tn.esprit.models.User;
 import tn.esprit.utils.MyDataBase;
 
 import java.sql.*;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class UserRepositoryImpl implements UserRepository {
@@ -17,7 +21,7 @@ public class UserRepositoryImpl implements UserRepository {
 
     @Override
     public User save(User user) {
-        if (user.getId() == null || user.getId() == 0) {  // Fixed null/0 comparison
+        if (user.getId() == null || user.getId() == 0) {
             return insert(user);
         } else {
             return update(user);
@@ -25,15 +29,14 @@ public class UserRepositoryImpl implements UserRepository {
     }
 
     private User insert(User user) {
-        // Ensure roles exist
         if (user.getRoles() == null || user.getRoles().isEmpty()) {
             user.setRoles(List.of("ROLE_USER"));
         }
 
-        String sql = "INSERT INTO user (email, roles, password, nom, prenom, age, adresse, sexe, telephone, " +
+        String sql = "INSERT INTO user (user_type, email, roles, password, nom, prenom, age, adresse, sexe, telephone, " +
                 "image_profil, specialite, certificat, latitude, longitude, email_auth_enabled, " +
                 "email_auth_code, created_at, failed_login_attempts, lock_until) " +
-                "VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)";
+                "VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)";
 
         try (PreparedStatement statement = connection.prepareStatement(sql, Statement.RETURN_GENERATED_KEYS)) {
             setUserParameters(statement, user);
@@ -44,14 +47,10 @@ public class UserRepositoryImpl implements UserRepository {
                     user.setId(generatedKeys.getInt(1));
                 }
             }
-
             return user;
         } catch (SQLException e) {
-            System.err.println("Erreur SQL:");
-            System.err.println("Message: " + e.getMessage());
-            System.err.println("Code d'état: " + e.getSQLState());
-            System.err.println("Code d'erreur: " + e.getErrorCode());
-            e.printStackTrace(); // Pour la stack trace complète
+            System.err.println("SQL Error: " + e.getMessage());
+            e.printStackTrace();
             throw new RuntimeException("Échec de l'enregistrement : " + e.getMessage(), e);
         }
     }
@@ -61,108 +60,53 @@ public class UserRepositoryImpl implements UserRepository {
             user.setRoles(List.of("ROLE_USER"));
         }
 
-        String sql = "UPDATE user SET " +
-                "email = ?, roles = ?, password = ?, nom = ?, prenom = ?, age = ?, " +
+        String sql = "UPDATE user SET user_type = ?, email = ?, roles = ?, password = ?, nom = ?, prenom = ?, age = ?, " +
                 "adresse = ?, sexe = ?, telephone = ?, image_profil = ?, specialite = ?, certificat = ?, " +
                 "latitude = ?, longitude = ?, email_auth_enabled = ?, email_auth_code = ?, " +
-                "created_at = ?, failed_login_attempts = ?, lock_until = ? " +
-                "WHERE id = ?";
+                "created_at = ?, failed_login_attempts = ?, lock_until = ? WHERE id = ?";
 
         try (PreparedStatement statement = connection.prepareStatement(sql)) {
-            // Set all parameters
-            statement.setString(1, user.getEmail());
-            statement.setString(2, serializeRolesToJson(user.getRoles()));
-            statement.setString(3, user.getPassword());
-            statement.setString(4, user.getNom());
-            statement.setString(5, user.getPrenom());
-            statement.setInt(6, user.getAge() != null ? user.getAge() : 0);
-            statement.setString(7, user.getAdresse());
-            statement.setString(8, user.getSexe());
-            statement.setString(9, user.getTelephone());
-            statement.setString(10, user.getImageProfil());
-            statement.setString(11, user.getSpecialite());
-            statement.setString(12, user.getCertificat());
-            statement.setObject(13, user.getLatitude(), Types.FLOAT);
-            statement.setObject(14, user.getLongitude(), Types.FLOAT);
-            statement.setBoolean(15, user.getEmailAuthEnabled());
-            statement.setString(16, user.getEmailAuthCode() != null ? user.getEmailAuthCode() : "");
-            statement.setTimestamp(17, Timestamp.valueOf(user.getCreatedAt()));
-            statement.setInt(18, user.getFailedLoginAttempts());
-
-            // Handle lock_until which might be null
-            if (user.getLockUntil() != null) {
-                statement.setTimestamp(19, Timestamp.valueOf(user.getLockUntil()));
-            } else {
-                statement.setNull(19, Types.TIMESTAMP);
-            }
-
-            // Set the ID for WHERE clause
-            statement.setInt(20, user.getId());
-
+            setUserParameters(statement, user);
+            statement.setInt(21, user.getId());
             statement.executeUpdate();
             return user;
         } catch (SQLException e) {
-            System.err.println("Error updating user:");
-            System.err.println("SQL State: " + e.getSQLState());
-            System.err.println("Error Code: " + e.getErrorCode());
-            System.err.println("Message: " + e.getMessage());
+            System.err.println("SQL Error: " + e.getMessage());
             e.printStackTrace();
-            throw new RuntimeException("Failed to update user: " + e.getMessage(), e);
-        }
-    }
-    @Override  // Add this annotation to properly override
-    public void delete(int userId) {
-        String sql = "DELETE FROM user WHERE id = ?";
-
-        try (PreparedStatement statement = connection.prepareStatement(sql)) {
-            statement.setInt(1, userId);
-
-            int affectedRows = statement.executeUpdate();
-            if (affectedRows == 0) {
-                throw new SQLException("Deleting user failed, no rows affected.");
-            }
-        } catch (SQLException e) {
-            // Replace logError with direct logging
-            System.err.println("Error deleting user:");
-            System.err.println("SQL State: " + e.getSQLState());
-            System.err.println("Error Code: " + e.getErrorCode());
-            System.err.println("Message: " + e.getMessage());
-            e.printStackTrace();
-            throw new RuntimeException("Failed to delete user: " + e.getMessage(), e);
+            throw new RuntimeException("Échec de la mise à jour : " + e.getMessage(), e);
         }
     }
 
     private void setUserParameters(PreparedStatement statement, User user) throws SQLException {
-        statement.setString(1, user.getEmail());
-        statement.setString(2, serializeRolesToJson(user.getRoles()));         statement.setString(3, user.getPassword());
-        statement.setString(4, user.getNom());
-        statement.setString(5, user.getPrenom());
-        statement.setInt(6, user.getAge());
-        statement.setString(7, user.getAdresse());
-        statement.setString(8, user.getSexe());
-        statement.setString(9, user.getTelephone());
-        statement.setObject(10, user.getImageProfil());
-        statement.setString(11, user.getSpecialite() );
-        statement.setString(12, user.getCertificat()) ;
-        statement.setObject(13, user.getLatitude());
-        statement.setObject(14, user.getLongitude());
-        statement.setBoolean(15, user.getEmailAuthEnabled());  // Changed from isEmailAuthEnabled()
-        statement.setString(16, user.getEmailAuthCode() != null ? user.getEmailAuthCode() : "");
-        statement.setTimestamp(17, Timestamp.valueOf(user.getCreatedAt()));
-        statement.setInt(18, user.getFailedLoginAttempts());
+        statement.setString(1, user.getUserType());
+        statement.setString(2, user.getEmail());
+        statement.setString(3, serializeRolesToJson(user.getRoles()));
+        statement.setString(4, user.getPassword());
+        statement.setString(5, user.getNom());
+        statement.setString(6, user.getPrenom());
+        statement.setInt(7, user.getAge() != null ? user.getAge() : 0);
+        statement.setString(8, user.getAdresse());
+        statement.setString(9, user.getSexe());
+        statement.setString(10, user.getTelephone());
+        statement.setObject(11, user.getImageProfil());
+        statement.setString(12, user.getSpecialite());
+        statement.setString(13, user.getCertificat());
+        statement.setObject(14, user.getLatitude());
+        statement.setObject(15, user.getLongitude());
+        statement.setBoolean(16, user.getEmailAuthEnabled());
+        statement.setString(17, user.getEmailAuthCode() != null ? user.getEmailAuthCode() : "");
+        statement.setTimestamp(18, Timestamp.valueOf(user.getCreatedAt()));
+        statement.setInt(19, user.getFailedLoginAttempts());
         if (user.getLockUntil() != null) {
-            statement.setTimestamp(19, Timestamp.valueOf(user.getLockUntil()));
+            statement.setTimestamp(20, Timestamp.valueOf(user.getLockUntil()));
         } else {
-            statement.setNull(19, Types.TIMESTAMP); // Spécifiez explicitement le type SQL
+            statement.setNull(20, Types.TIMESTAMP);
         }
-    }
-    private String getNullIfEmpty(String value) {
-        return (value == null || value.trim().isEmpty()) ? null : value;
     }
 
     private String serializeRolesToJson(List<String> roles) {
         if (roles == null || roles.isEmpty()) {
-            return "[\"ROLE_USER\"]"; // default role
+            return "[\"ROLE_USER\"]";
         }
         return "[\"" + String.join("\",\"", roles) + "\"]";
     }
@@ -173,7 +117,6 @@ public class UserRepositoryImpl implements UserRepository {
 
         try (PreparedStatement statement = connection.prepareStatement(sql)) {
             statement.setString(1, email);
-
             try (ResultSet resultSet = statement.executeQuery()) {
                 if (resultSet.next()) {
                     return mapResultSetToUser(resultSet);
@@ -181,7 +124,7 @@ public class UserRepositoryImpl implements UserRepository {
                 return null;
             }
         } catch (SQLException e) {
-            throw new RuntimeException("Failed to find user by email", e);
+            throw new RuntimeException("Échec de la recherche par email", e);
         }
     }
 
@@ -192,30 +135,56 @@ public class UserRepositoryImpl implements UserRepository {
 
         try (Statement statement = connection.createStatement();
              ResultSet resultSet = statement.executeQuery(sql)) {
-
             while (resultSet.next()) {
                 users.add(mapResultSetToUser(resultSet));
             }
             return users;
         } catch (SQLException e) {
-            throw new RuntimeException("Failed to find all users", e);
+            throw new RuntimeException("Échec de la récupération des utilisateurs", e);
         }
     }
 
     private User mapResultSetToUser(ResultSet resultSet) throws SQLException {
-        User user = new User();
+        String userType = resultSet.getString("user_type");
+        User user;
+        switch (userType) {
+            case "ADMIN":
+                user = new Admin();
+                break;
+            case "PATIENT":
+                user = new Patient();
+                break;
+            case "MEDECIN":
+                user = new Medecin();
+                break;
+            default:
+                throw new SQLException("Type d'utilisateur invalide : " + userType);
+        }
+
         user.setId(resultSet.getInt("id"));
         user.setEmail(resultSet.getString("email"));
 
-        // Parse roles
         String rolesJson = resultSet.getString("roles");
+        List<String> roles = new ArrayList<>();
         if (rolesJson != null && !rolesJson.isEmpty()) {
-            // Remove brackets and quotes, then split
-            String cleaned = rolesJson.replaceAll("[\\[\\]\"]", "");
+            String cleaned = rolesJson.replaceAll("[\\[\\]\"]", "").trim();
             if (!cleaned.isEmpty()) {
-                user.getRoles().addAll(List.of(cleaned.split(",")));
+                roles = new ArrayList<>(Arrays.asList(cleaned.split(",")));
             }
         }
+
+        // Validate roles
+        if (roles.isEmpty()) {
+            System.err.println("No valid roles for user ID: " + user.getId() + ", email: " + user.getEmail());
+            throw new SQLException("Rôles invalides pour l'utilisateur : aucun rôle défini");
+        }
+        for (String role : roles) {
+            if (!Arrays.asList("ROLE_ADMIN", "ROLE_PATIENT", "ROLE_MEDECIN").contains(role)) {
+                System.err.println("Invalid role '" + role + "' for user ID: " + user.getId() + ", email: " + user.getEmail());
+                throw new SQLException("Rôle invalide pour l'utilisateur : " + role);
+            }
+        }
+        user.setRoles(roles);
 
         user.setPassword(resultSet.getString("password"));
         user.setNom(resultSet.getString("nom"));
@@ -227,18 +196,16 @@ public class UserRepositoryImpl implements UserRepository {
         user.setImageProfil(resultSet.getString("image_profil"));
         user.setSpecialite(resultSet.getString("specialite"));
         user.setCertificat(resultSet.getString("certificat"));
-        user.setLatitude(resultSet.getObject("latitude") != null ? resultSet.getFloat("latitude") : null);
-        user.setLongitude(resultSet.getObject("longitude") != null ? resultSet.getFloat("longitude") : null);
+        user.setLatitude(resultSet.getObject("latitude") != null ? resultSet.getDouble("latitude") : null);
+        user.setLongitude(resultSet.getObject("longitude") != null ? resultSet.getDouble("longitude") : null);
         user.setEmailAuthEnabled(resultSet.getBoolean("email_auth_enabled"));
         user.setEmailAuthCode(resultSet.getString("email_auth_code"));
-
         Timestamp createdAt = resultSet.getTimestamp("created_at");
         user.setCreatedAt(createdAt != null ? createdAt.toLocalDateTime() : null);
-
         user.setFailedLoginAttempts(resultSet.getInt("failed_login_attempts"));
-
         Timestamp lockUntil = resultSet.getTimestamp("lock_until");
         user.setLockUntil(lockUntil != null ? lockUntil.toLocalDateTime() : null);
+        user.setUserType(userType);
 
         return user;
     }
@@ -253,9 +220,26 @@ public class UserRepositoryImpl implements UserRepository {
                 }
             }
         } catch (SQLException e) {
-            throw new RuntimeException("Failed to find user by id", e);
+            throw new RuntimeException("Échec de la recherche par ID", e);
         }
         return null;
+    }
+
+    @Override
+    public void delete(int userId) {
+        String sql = "DELETE FROM user WHERE id = ?";
+
+        try (PreparedStatement statement = connection.prepareStatement(sql)) {
+            statement.setInt(1, userId);
+            int affectedRows = statement.executeUpdate();
+            if (affectedRows == 0) {
+                throw new SQLException("Échec de la suppression, aucun utilisateur trouvé.");
+            }
+        } catch (SQLException e) {
+            System.err.println("Erreur de suppression : " + e.getMessage());
+            e.printStackTrace();
+            throw new RuntimeException("Échec de la suppression : " + e.getMessage(), e);
+        }
     }
 
     @Override
@@ -268,18 +252,14 @@ public class UserRepositoryImpl implements UserRepository {
             for (int i = 1; i <= 3; i++) {
                 statement.setString(i, searchTerm);
             }
-
             try (ResultSet resultSet = statement.executeQuery()) {
                 while (resultSet.next()) {
                     users.add(mapResultSetToUser(resultSet));
                 }
             }
         } catch (SQLException e) {
-            throw new RuntimeException("Failed to search users", e);
+            throw new RuntimeException("Échec de la recherche d'utilisateurs", e);
         }
         return users;
     }
-
-
-
 }
